--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-spring.application.name=Curso-springboot
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin 
+# num ambiente real e não simulado, obviamente seria mais seguro
+spring.datasource.url=jdbc:postgresql//localhost:5432/meu_banco
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
